Fix logo margin on mobile

--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -267,7 +267,7 @@ h3 {
 .logoTLU {
     position: relative;
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 20px auto;
     max-width: 16%;
 }
 
@@ -390,6 +390,7 @@ div .descriptionHeading {
     background-color: rgb(0,0,0,0.4); /* Black w/ opacity */
     transform: translate(-50%, -50%);
 }
+
 
 /* Modal Content */
 .modal-content {
@@ -532,6 +533,10 @@ div .descriptionHeading {
         margin-bottom: 60px;
     }
 
+    .logoTLU{
+        margin-bottom: 40px;
+    }
+
 }
 
 
@@ -569,6 +574,7 @@ div .descriptionHeading {
         grid-gap: 5px;
         grid-auto-rows: 120px 120px 120px 120px 120px;
         margin: 0 auto 650px auto;
+        width: 38%;
     }
 
     .categoryList,
@@ -706,6 +712,7 @@ div .descriptionHeading {
         height: 40px;
         padding: 0;
         margin: 40px 0 0 0;
+        border-radius: 50%;
     }
 
     .gameStartBtn {
@@ -717,8 +724,6 @@ div .descriptionHeading {
         font-size: 1.6em;
         margin: 0 auto;
     }
-
-
 
     /* idea */
 
@@ -781,6 +786,9 @@ div .descriptionHeading {
 
     .logoTLU {
         max-width: 45%;
+    }
+
+    .gameBody {
     }
 
 }
